[11.12] released ...
* Unless the 'fullnames' variable was set, nail did not generate 'To' header
  fields when replying to messages since version 11.5 (Bugreport by Bob
  Tennent).
* An internal problem in the token scanning for junk mail detection has been
  fixed; the end of the mail header was not always correctly determined.

[11.11] released 10/13/04
* When sending messages that contain ASCII control characters but neither
  NULs nor non-ASCII characters, the quoted-printable MIME encoding is now
  used instead of 7bit.
* A dangling pointer after a memory reallocation could result in a coredump
  when the junk mail database was updated by a 'good' or a 'junk' command.
* The code for accessing the junk mail database has been made more machine-
  independent. It will not make a difference on most of the platforms on
  which nail runs. If your compiler does insert padding into C structs that
  contain only members of type char, you will have to create the junk mail
  database from scratch again, though.

[11.10] released 10/3/04
* The creation of quoted-printable encoded MIME data was broken in 11.9.
* Junk mail filter improvement: Do not ignore single-letter words; extract
  hostnames from URLs and store them separately.

[11.9] released 10/2/04
* A Bayesian junk mail filter has been added. See the 'EXAMPLES' section of
  the manual page for an introduction.
* Fixed an IMAP response parsing bug which caused nail to hang on messages
  that contained no text with many IMAP servers.
* Empty lines within the command lists for account or macro definitions are
  now ignored.
* An attempt to define a macro twice is now properly detected and results in
  an error message.
* Nail was reported to hang sporadically when sending multipart messages on
  HP-UX. A possible reason for such problems on systems without /dev/urandom
  has been eliminated (Bugreport by Patrick Briggs).
* Fixed a small internal stack buffer overflow that occured regardless of