@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)pop3.c	2.38 (gritter) 10/2/04";
+static char sccsid[] = "@(#)pop3.c	2.39 (gritter) 10/19/04";
 #endif
 #endif /* not lint */
 
@@ -551,6 +551,7 @@ pop3_setfile(const char *server, int newmail, int isedit)
 		memcpy(user, sp, cp - sp);
 		user[cp - sp] = '\0';
 		sp = &cp[1];
+		user = strdec(user);
 	} else
 		user = NULL;
 	verbose = value("verbose") != NULL;
